# WinAPI-POSIX

./: .travis.yml  README.md  s.cpp  server.cpp  x.cpp
test/: CMakeLists.txt  client.c  client.h  exo.cpp  main.c  test.cpp
test/gtest/: Makefile  cmake_install.cmake
